# Zupersale

./: .gitignore  README.md
.github/workflows/: Basic.yml
contracts/: Cargo.toml  state.json
contracts/artifacts/: checksums.txt
contracts/contracts/campaign/: Cargo.toml  README.md
contracts/contracts/campaign/src/: contract.rs  error.rs  execute.rs  interface.rs  lib.rs  msg.rs  queries.rs  state.rs  utils.rs
contracts/contracts/campaign/src/tests/: integration_tests.rs  unit_tests.rs
contracts/contracts/campaign_index/: Cargo.toml  README.md
contracts/contracts/campaign_index/src/: contract.rs  error.rs  interface.rs  lib.rs  msg.rs  state.rs  utils.rs
contracts/contracts/campaign_index/src/tests/: integration_tests.rs  unit_tests.rs
frontend/: codegen.ts  package-lock.json  package.json
frontend/schemas/zuper-campaign/: campaign.json
frontend/schemas/zuper-index/: campaign-index.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[createNFT]/: page.tsx
frontend/src/codegen/: ZuperCampaign.client.ts  ZuperCampaign.message-composer.ts  ZuperCampaign.types.ts  ZuperIndex.client.ts  ZuperIndex.message-composer.ts  ZuperIndex.types.ts  bundle.ts
frontend/src/components/WalletConnect/: WalletConnect.tsx
frontend/src/components/button/: CreateNft.tsx
frontend/src/components/form-components/: CampaignForm.tsx  FormDropDown.tsx  FormInputCheckbox.tsx  FormInputDate.tsx  FormInputText.tsx  IncentiveForm.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/pages/: Homepage.tsx
frontend/src/components/provider/: Provider.tsx
frontend/src/hooks/: queryDenoms.ts
